Fixed overlap of throwable borders

--- a/public/css/throwables.css
+++ b/public/css/throwables.css
@@ -18,6 +18,7 @@
 
 .th_icon {
   display: inline-block; 
+  border: 3px solid transparent; 
 }
 
 .th_icon > div {
@@ -47,9 +48,12 @@
   filter: brightness(0.2);
 }
 
+.th_icon.th_selected {
+  border: 3px solid rgb(240, 240, 240); 
+}
+
 .th_icon.th_selected > div {
   transform: scale(0.85);
-  border: 3px solid rgb(240, 240, 240); 
 }
 
 .th_icon.th_selected > div::before {
@@ -94,7 +98,7 @@
   background-image: url("/img/throwables/dynamite.png"); 
 }
 
-#dynamite {
+#shuriken {
   background-image: url("/img/throwables/shuriken.png"); 
 }
 
